[tool.poetry]
name = "experiment-streamlit-wordcloud-ja"
version = "0.1.0"
description = ""
authors = ["Hironao OTSUBO <motemen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.11.0"
wordcloud = "^1.8.2"
Janome = "^0.4.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
watchdog = "^2.1.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
